fix(podcast): fix eps list table overflows

--- a/src/public/css/podcast/podcast_detail.css
+++ b/src/public/css/podcast/podcast_detail.css
@@ -35,6 +35,8 @@
     border-radius: 15px;
     width: 100%;
     transition: all 0.5s ease;
+    overflow-x: scroll;
+    padding: 0 4px;
 
     > h2 {
       text-align: center;
